external-crates/move/crates/move-compiler/tests/development/typing/signed_int_enum_match.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E01003]: invalid modifier
  ┌─ tests/development/typing/signed_int_enum_match.move:5:5
  │
5 │     enum MyEnum has drop {
  │     ^^^^ Invalid enum declaration. Internal enum declarations are not yet supported
  │
  = Visibility annotations are required on enum declarations.
